# ai-broker

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  healthcheck.yml  trump-pull-cron.yml
app/: __init__.py  main.py
app/agents/: __init__.py  paper_agent.py  position_monitor.py  punishment.py
app/api/: __init__.py  routes.py
app/bot/: __init__.py  app.py  handlers.py
app/core/: __init__.py  config.py  debug_probe.py  logging.py
app/memory/: database.py  embedder.py  retriever.py
app/services/: __init__.py  analysis_runner.py  finnhub_news.py  market_clock.py  news_pipeline.py  public_live_snapshot.py  screener.py  telegram_operator_alerts.py  trump_monitor.py
app/tools/: __init__.py  definitions.py  executor.py  technical.py  technical_extended.py
app/web/: __init__.py  routes.py
docs/: COST_DECISION.md  FAZ15_PLAN.md  FAZ4_DEPLOY.md  FAZ5_PLAN.md  T212_LIVE_SWITCH.md
experiments/: README.md
experiments/model_race/: faz0_embed_test.py  faz0_test.py
scripts/: apply_sql_schemas.py  bootstrap_ubuntu_ai_broker.sh  check_supabase_faz2.py  faz3_e2e_check.py  inspect_paper_supabase.py  live_paper_cycle.py  smoke_runpaper_local.py  sync_telegram_allowed_from_updates.py  truth_oauth_token.py
sql/: README.md  schema.dbml
sql/schemas/: 001_memory.sql  002_paper_trading.sql  003_paper_agent.sql  004_t212_paper_execution.sql  005_t212_pending_mirror.sql  trump_posts.sql
tests/integration/: test_faz3_e2e_checklist.py
(+44 files in other folders)
