[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-broker"
version = "1.4.0"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "httpx",
    "curl-cffi",
    "python-dotenv",
    "ollama",
    "groq",
    "yfinance",
    "pandas",
    "pandas-ta",
    "rich",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    "python-telegram-bot>=21.10",
    "websockets>=13.0",
    "exchange-calendars",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35",
]

# PokieTicker / toon-spec: optional clones under external/ (see AI_BROKER_PROJECT.md, Faz 0 closing notes).
integrations = [
    "toon-format>=0.9.0b1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
